helm/traefik/manual/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    name: web
    port: 80
  - protocol: TCP
    name: websecure
    port: 443
  - protocol: TCP
    name: admin
    port: 8080
  selector:
    app: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: whoami

spec:
  ports:
  - protocol: TCP
    name: web
    port: 80
  selector:
    app: whoami
